remove deprecated code and use modern methods/classes/code where applicable